--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,15 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  height: 70vh;
+  height: 80vh;
   width: 50vw;
-  padding: 40px;
+  padding: 0 40px 40px 40px;
   background-color: white;
   border-radius: 50px;
+  box-shadow: 2px 2px 10px 5px #ccc;
 }
 
 .App h1 {
-  color: black;
+  color: #67dfd4;
+  margin: 10px 0 50px 0;
 }
