--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,10 @@
   padding: 0 40px 40px 40px;
   background-color: white;
   border-radius: 50px;
-  box-shadow: 2px 2px 10px 5px #ccc;
+  box-shadow: 7px 5px 7px 2px #ccc;
 }
 
 .App h1 {
-  color: #67dfd4;
+  color: #313840;
   margin: 10px 0 50px 0;
 }
