--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -8,7 +8,7 @@
   letter-spacing: 2px;
   border: none;
   outline: none;
-  background-color: #67dfd4;
+  background-color: #313840;
   color: white;
   border: 2px solid transparent;
   border-radius: 10px;
