--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   height: 90vh;
-  width: 50vw;
-  padding: 0 40px 40px 40px;
+  width: 70vw;
+  padding: 0 calc(5px + 2vmin) calc(5px + 2vmin) calc(5px + 2vmin);
   background-color: white;
   border-radius: 50px;
   box-shadow: 7px 5px 7px 2px #ccc;
@@ -15,5 +15,5 @@
 
 .App h1 {
   color: #313840;
-  margin: 10px 0 50px 0;
+  margin: 10px 0 calc(5px + 2vmin) 0;
 }
