--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,9 +1,9 @@
 .Button {
   margin: auto;
   cursor: pointer;
-  width: 50%;
+  width: 60%;
   height: 10%;
-  font-size: 18px;
+  font-size: calc(5px + 2vmin);
   font-weight: bold;
   letter-spacing: 2px;
   border: none;
