improved the ui

--- a/src/components/Navigation/BurgerMenu/BurgerMenu.module.css
+++ b/src/components/Navigation/BurgerMenu/BurgerMenu.module.css
@@ -9,6 +9,8 @@
   margin-left: 10px;
   box-sizing: border-box;
   cursor: pointer;
+  position: relative;
+  z-index: 1000;
 }
 
 .BurgerMenu div {
