--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,13 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  height: 90vh;
+  height: 100vh;
   min-height: 500px;
-  width: 70vw;
+  width: 80vw;
   padding: 0 calc(5px + 2vmin) calc(5px + 2vmin) calc(5px + 2vmin);
   background-color: white;
-  border-radius: 50px;
-  box-shadow: 7px 5px 7px 2px #ccc;
+
+  margin: 0;
 }
 
 .VirtualSensor h1 {
@@ -26,5 +26,7 @@
 @media (max-width: 1250px) {
   .VirtualSensor {
     margin: auto;
+    box-shadow: 5px 3px 5px 1px #ccc;
+    border-radius: 50px;
   }
 }
