--- a/src/components/CarCrashHome/CarCrashHome.module.css
+++ b/src/components/CarCrashHome/CarCrashHome.module.css
@@ -2,5 +2,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
+}
+
+.Home p {
+  margin-bottom: 50px;
 }
